--- a/wp-content/themes/jtwebfolio/assets/sass/_base.scss
+++ b/wp-content/themes/jtwebfolio/assets/sass/_base.scss
@@ -602,7 +602,7 @@ a {
 /* ROTATE ORIENTATION
 ********************************/
 
-@media screen and (max-height:400px) {
+@media screen and (max-height:350px) {
 	
 	.mobile-navigation {
 		.menu-main-navigation-container {
